--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,7 +1,7 @@
 project:
   type: "website"
   title: "Data science using R"
-  output-dir: _output
+  output-dir: _site
   render:
     - "index.qmd"
     #- "2023/*.qmd"
@@ -19,9 +19,6 @@ website:
   page-navigation: true
   reader-mode: true
   open-graph: true
-  twitter-card: 
-    creator: "@<twitter-handle>"
-    site: "\\@<twitter-handle>"
   favicon: "figures/icons/course_favicon.png"
   search:
     location: navbar
@@ -33,32 +30,10 @@ website:
         text: "🏠 Home"
       - href: 2024Spring/index.qmd
         text: "🏢 Current semester"
-      # - href: 2023/syllabus.qmd
-      #   text: "📓 Syllabus"
-      # - href: 2023/communication.qmd
-      #   text: "📟 Communication"
-      # - href: 2023/assignments.qmd
-      #   text: "✍️ Assignments"
-      #   contents:
-      #     - href: 2023/assignments/assignment01.qmd
-      #       text: "📝 Assignment 01"
-      #     - href: 2023/assignments/assignment02.qmd
-      #       text: "📝 Assignment 02"
-      #     - href: 2023/assignments/group_project.qmd
-      #       text: "👥 Group Project"
       - section: "🗓️ Material"
         contents:
          - href: 2024Spring/material/index.qmd
            text: Overview
-         #- href: 2023/weeks/week01/page.qmd
-        #   text: Week 01
-           # contents:
-            # - href: 2023/weeks/week01/page.qmd
-             #  text: 👨‍🏫 Lecture Material
-            #  - href: 2023/weeks/week01/lab.qmd
-            #    text: 💻 Lab Roadmap
-            #  - href: 2023/weeks/week01/appendix.qmd
-            #    text: 🔖 Appendix
          - href: 2024Spring/material/session01.qmd
            text: Session 01
          - href: 2024Spring/material/session02.qmd
@@ -79,7 +54,7 @@ website:
 
 
 bibliography: references/references.bib
-csl: references/chicago-author-date.csl
+csl: references/jepp.csl
 
 
 format:
@@ -96,12 +71,8 @@ format:
     theme:
       light: 
         - journal
-        - css/custom.scss # I use this just to change the default colour
-    css: 
-      #- css/custom_style.css
-      - css/syllabus.css
+        - css/custom.scss # Change the default colour
     toc: true
 
 #margin-header: |
 # ![](/figures/logos/MY_INSTITUTION.png)
-
