--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,8 +4,6 @@ project:
   output-dir: _site
   render:
     - "index.qmd"
-    #- "2023/*.qmd"
-    #- "2023/weeks/week01/*.qmd"
     - "2024Spring/*.qmd"
     - "2024Spring/material/*.qmd"
     - "2024Spring/material/session*/*.qmd"
@@ -51,11 +49,8 @@ website:
     background: light
     left: "Copyright 2024, Claudius Gräbner-Radkowitsch" 
 
-
-
 bibliography: references/references.bib
 csl: references/jepp.csl
-
 
 format:
   html:
@@ -65,8 +60,7 @@ format:
 
     email-obfuscation: javascript
     link-external-newwindow: true
-    link-external-icon: true
-    link-external-filter: ^(?:http:|https:)\/\/(?:lse-dsi\.github\.io\/|localhost)
+    link-external-icon: false
 
     theme:
       light: 
