Minor typos and new slides

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -40,6 +40,8 @@ website:
            text: Session 03
          - href: 2024Spring/material/session04.qmd
            text: Session 04
+         - href: 2024Spring/material/session05.qmd
+           text: Session 05
       - href: 2024Spring/tutorials.qmd
         text: "💻 Tutorials"
 
