Allow for building page on Netlify

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -70,5 +70,7 @@ format:
         - css/custom.scss # Change the default colour
     toc: true
 
+execute:
+  freeze: auto
 #margin-header: |
 # ![](/figures/logos/MY_INSTITUTION.png)
