--- a/_quarto.yml
+++ b/_quarto.yml
@@ -42,6 +42,8 @@ website:
            text: Session 04
          - href: 2024Spring/material/session05.qmd
            text: Session 05
+         - href: 2024Spring/material/session06.qmd
+           text: Session 06
       - href: 2024Spring/tutorials.qmd
         text: "💻 Tutorials"
 
