Add material for session 14

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -54,6 +54,10 @@ website:
            text: Session 11
          - href: 2024Spring/material/session12.qmd
            text: Session 12-13
+         - href: 2024Spring/material/session14.qmd
+           text: Session 14
+         - href: 2024Spring/material/session15.qmd
+           text: Session 15
       - href: 2024Spring/tutorials.qmd
         text: "💻 Tutorials"
 
