add recap session

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -60,6 +60,8 @@ website:
            text: Sessions 15 & 16
          - href: 2024Spring/material/session17.qmd
            text: Sessions 17 & 18
+         - href: 2024Spring/material/session19.qmd
+           text: Session 19
       - href: 2024Spring/tutorials.qmd
         text: "💻 Tutorials"
 
